[package]
name = "concurrent-hashmap"
version = "0.1.0"
authors = ["Viktor Dahl <pazaconyoman@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/veddan/rust-concurrent-hashmap.git"
documentation = "https://veddan.github.io/rustdoc/concurrent-hashmap/concurrent_hashmap/index.html"
description = "A concurrent hashmap library."

[dependencies]
spin = '0.4.4'

[dev-dependencies]
rand = '0.3.11'

[profile.test]
opt-level = 1

[profile.bench]
debug = true
